--- a/website/style.css
+++ b/website/style.css
@@ -8,10 +8,10 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-#app{
+/* #app{
     display: grid;
     grid-auto-rows: minmax(150px, auto);
-    /* grid-template-columns:  */
+    grid-template-columns: subgrid;
     height:100vh;
     background: #f23557;
     color: #f0d43a;
@@ -19,14 +19,35 @@ body{
     grid-gap: 1em;
     font-size: 20px;
     font-family: 'Oswald', sans-serif;
+} */
+
+#app {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    background: #f23557;
+    color: #f0d43a;
 }
 
 .holder{
-    
+    width: 40%;
+    padding-bottom: 20px;
 }
 
 .entry{
     background: rgba(59, 74, 107, .4);
+}
+
+.line {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    width: 170px;
 }
 
 #entryHolder{
@@ -78,6 +99,7 @@ button{
     font-family: 'Oswald', sans-serif;
     border: none;
     box-shadow: 2px 4px 5px #444;
+    cursor: pointer;
 }
 h1{
     font-size: 36px;
